# symulator_scr

./: README.md  run_build  start
admin/: CMakeLists.txt
config/: simulator_config.txt
src/: simulator_config.c  simulator_config.h  simulator_scr.c
src/common/: rpc_all.c  rpc_all.h  rpc_data.h  simulator_config.c  simulator_config.h
src/driver/: client_scr.c  driver_data.h  driver_remote_calls.c  driver_remote_calls.h  driver_scr.c
src/simulator/: board_help_calcs.c  board_help_calcs.h  simulator_config.c  simulator_config.h  simulator_data.h  simulator_draw.c  simulator_draw.h  simulator_img_defines.c  simulator_img_defines.h  simulator_remote_calls.c  simulator_remote_calls.h  simulator_scr.c  simulator_scr.h  simulator_utils.c  simulator_utils.h
